# hal_nxp

./: .gitignore
dts/nxp/kinetis/: K32L2A31VLH1A-pinctrl.h  K32L2A31VLL1A-pinctrl.h  K32L2A41VLH1A-pinctrl.h  K32L2B11VFM0A-pinctrl.h  K32L2B11VFT0A-pinctrl.h  K32L2B11VLH0A-pinctrl.h  K32L2B11VMP0A-pinctrl.h  K32L2B21VFM0A-pinctrl.h  K32L2B21VFT0A-pinctrl.h  K32L2B21VLH0A-pinctrl.h  K32L2B21VMP0A-pinctrl.h  K32L2B31VFT0A-pinctrl.h  K32L2B31VMP0A-pinctrl.h  MK02FN128VLF10-pinctrl.h  MK02FN128VLH10-pinctrl.h  MK22FN128VDC10-pinctrl.h  MK22FN128VLH10-pinctrl.h  (+124 more)
mcux/: README  hal_nxp.cmake
mcux/middleware/: CMakeLists.txt
mcux/scripts/: sync_sdk_ng.py
s32/drivers/s32ze/: CMakeLists.txt
s32/drivers/s32ze/BaseNXP/header/: S32Z2.h  S32Z2_I3C.h
s32/drivers/s32ze/BaseNXP/include/: BasicTypes.h
s32/drivers/s32ze/Can_CANEXCEL/: CMakeLists.txt
s32/drivers/s32ze/Can_CANEXCEL/include/: CanEXCEL_Ip_DevReg.h  CanEXCEL_Ip_Irq.h  CanEXCEL_Ip_Types.h
s32/drivers/s32ze/Can_CANEXCEL/src/: CanEXCEL_Ip.c  CanEXCEL_Ip_HwAccess.c  CanEXCEL_Ip_Irq.c
s32/drivers/s32ze/EthSwt_NETC/: CMakeLists.txt
s32/drivers/s32ze/Eth_NETC/: CMakeLists.txt
s32/drivers/s32ze/Icu/: CMakeLists.txt
s32/drivers/s32ze/Mcu/: CMakeLists.txt
s32/drivers/s32ze/Mem_EXFLS/: CMakeLists.txt
s32/drivers/s32ze/Mem_EXFLS/include/: Qspi_Ip_HyperflashTypes.h
s32/drivers/s32ze/Platform/: CMakeLists.txt
s32/drivers/s32ze/Platform/include/: Mru_Ip_Types.h
s32/drivers/s32ze/Rte/: CMakeLists.txt
s32/drivers/s32ze/Spi/: CMakeLists.txt
s32/drivers/s32ze/Uart/: CMakeLists.txt
zephyr/: module.yml
(+4631 files in other folders)
